--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,5 +17,6 @@
 
     <h1>My Astro Learning Blog</h1>
     <p>This is where I will post about my journey learning Astro.</p>
+    <p>Money Money</p>
   </body>
 </html>
