--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../components/Footer.astro';
+import  Navigation from '../components/Navigation.astro';
 import '../styles/global.css';
 const pageTitle = "This is me";
 const identity = {
@@ -22,9 +24,7 @@ const goal = 3;
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
@@ -49,5 +49,6 @@ const goal = 3;
         <p>My goal is not 3 days.</p>
       )
     }
+    <Footer />
   </body>
 </html>
