--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from '../components/Footer.astro';
-import  Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
+
 import '../styles/global.css';
 const pageTitle = "This is me";
 const identity = {
@@ -24,7 +25,7 @@ const goal = 3;
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
