Addwe Hamburger to mneu and script tags

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,10 @@ import '../styles/global.css';
   <body>
     <Header />
     <h1>My Astro Site</h1>
-    <Footer /
+    <Footer />
+    <script>
+     import "../scripts/menu.js";
+    </script>
+  
   </body>
 </html>
