--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 
-import '../styles/global.css';
+import "../styles/global.css";
 const pageTitle = "This is me";
 const identity = {
   firstName: "Sarah",
@@ -51,5 +51,8 @@ const goal = 3;
       )
     }
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
