--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,8 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 
-import '../styles/global.css';
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -14,7 +14,7 @@ import '../styles/global.css';
     <title>Astro</title>
   </head>
   <body>
-   <Header />
+    <Header />
 
     <h1>My Astro Learning Blog</h1>
     <p>This is where I will post about my journey learning Astro.</p>
@@ -24,5 +24,8 @@ import '../styles/global.css';
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
